k8s/backend-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-headers
  namespace: dev-ops-project
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "OPTIONS"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "http://devops-project.local:3000"
      - "*"
    accessControlMaxAge: 100
