k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev-ops-project
spec:
  selector:
    app: frontend #must match the deployment's spec.template.metadata.labels.app
  ports:
    - port: 80 #The port ingress is looking for
      targetPort: 80 #The port the container is listening on

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev-ops-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend #must match the service's selector.app
    spec:
      containers:
        - name: frontend
          image: tasezmaj/devops-project-frontend:latest
          ports:
            - containerPort: 80 #The port the container is listening on
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
